--- a/rabbithole/src/app/sub-systems/events/screens/events-home/events-home.component.scss
+++ b/rabbithole/src/app/sub-systems/events/screens/events-home/events-home.component.scss
@@ -2,7 +2,8 @@
 $greyColour: #212121;
 $greenColour: #a7ff2d;
 $lightGreyColour: #3e3d3d;
-$lightestGreyColour: #ededed;
+$lightestGreyColour: #3e3d3d;
+
 h3 {
     margin: 0 0 10px;
 }
@@ -12,19 +13,56 @@ pre {
     padding: 15px;
 }
 
+::ng-deep .cal-month-view .cal-header .cal-cell {
+    color: $greenColour !important;
+    font-weight: normal !important;
+}
+
+::ng-deep .cal-month-view{
+    background-color: transparent !important;
+}
+
+::ng-deep .cal-month-view .cal-day-cell.cal-today {
+    background-color: #5b5b5b !important;
+}
+
+::ng-deep .cal-cell:hover {
+    background-color: #656464 !important;
+}
+
+::ng-deep .cal-cell-row:hover {
+    background-color: transparent !important;
+}
+
+::ng-deep .cal-days{
+    background-color: $greyColour !important;
+}
+
+::ng-deep .cal-drag-over{
+    background-color: #656464 !important;
+}
+
+::ng-deep .cal-day-cell .cal-day-number {
+    border-color: $greenColour !important;
+    color: $greenColour !important;
+    opacity: 60% !important;
+    border-right-color: $greenColour !important;
+}
+
 .btn{
     color: $greenColour !important;
     background-color: $greyColour ;
     border-color: $greenColour !important ;
 }
 
-.btn.active{
+::ng-deep .btn.active{
     background-color: $greenColour !important ;
     color: $greyColour !important;
-
+    opacity: 60% !important;
 }
-.btn:hover{
-    background-color: $lightGreyColour;
+
+::ng-deep .btn:hover{
+    background-color: $lightGreyColour ;
 }
 
 .btn-outline-secondary{
@@ -38,15 +76,16 @@ pre {
 }
 
 th{
-    color: $greenColour;
+    color: $greenColour !important;
+    font-weight: normal !important;
 }
 
 thead{
-    border-bottom: 2px solid $greenColour !important;
-
+    border-bottom: 2px solid #ffffff !important;
+    font-weight: normal !important;
 }
 table{
-    border: $greenColour !important;
+    border: #ffffff !important;
 }
 
 #all-event-content{
@@ -55,8 +94,8 @@ table{
 }
 
 input{
-    background-color: #3e3d3d !important;
-    color: $lightestGreyColour !important;
+    background-color: transparent !important;
+    color: $greenColour !important;
 }
 
 button.btn.btn-danger{
