--- a/rabbithole/src/styles.scss
+++ b/rabbithole/src/styles.scss
@@ -18,8 +18,8 @@ $retroGreen: #A7FF2D;
     src: local("Avenir-roman"), url(/assets/fonts/Avenir/AvenirLTStd-Roman.otf) format("opentype");
 }
 
-body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; }
-html { background-color: #212121;}
+body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; background-color: #212121;}
+
 //apparently we need to put the auth css in Global, because it gets called later. 
 
 [data-amplify-authenticator-signin]
