tooltip added to sidenav for admin

--- a/rabbithole/src/app/app.component.html
+++ b/rabbithole/src/app/app.component.html
@@ -18,7 +18,9 @@
       <button class="nav-button" [routerLink]="'claims'">
         <mat-icon>playlist_add_check</mat-icon>
       </button>
-      <button class="nav-button" [routerLink]="'admin'"><mat-icon>admin_panel_settings</mat-icon></button>
+
+
+      <button class="nav-button" [routerLink]="'admin'" matTooltip="Admin Page" matTooltipPosition="right"><mat-icon>admin_panel_settings</mat-icon></button>
       <button class="nav-button-bottom" [routerLink]="'profile'">
         <mat-icon>person_outline</mat-icon>
       </button>
