--- a/rabbithole/src/app/sub-systems/chat/components/preferences-popup/preferences-popup.component.scss
+++ b/rabbithole/src/app/sub-systems/chat/components/preferences-popup/preferences-popup.component.scss
@@ -60,18 +60,19 @@ appearance: none;
 position: fixed;
 right:47%;
 }
-
 .regular-checkbox {
--webkit-appearance: none;
-background-color: #fafafa;
-border: 1px solid #cacece;
-box-shadow: 0 1px 2px rgba(0,0,0,0.05), inset 0px -15px 10px -12px rgba(0,0,0,0.05);
-padding: 9px;
-border-radius: 5px;
-display: inline-block;
-position: relative;
-right: 0;
-}
+  -webkit-appearance: none;
+  background-color: #fafafa;
+  border: 1px solid #cacece;
+  box-shadow: 0 1px 2px rgba(0,0,0,0.05), inset 0px -15px 10px -12px rgba(0,0,0,0.05);
+  padding: 9px;
+  border-radius: 5px;
+  display: inline-block;
+  position: relative;
+  right: 0;
+  width: auto;
+  height: 50%;
+  }
 
 .regular-checkbox:active, .regular-checkbox:checked:active {
 box-shadow: 0 1px 2px rgba(0,0,0,0.05), inset 0px 1px 3px rgba(0,0,0,0.1);
@@ -125,11 +126,16 @@ input[type="checkbox"]{
   position: relative;
   right: -20%;
 }
-
-input[type="text"]{
+input[type=text]{
+  color: #99a1a7;
+  background-color: #3e3d3d;
+  text-align: center;
+  font-family: 'Open Sans', sans-serif;
+  border: none;
+  border-radius: 0.3em;
   width: 40%;
-  position: relative;
-  right: -20%;
+  position: relative !important;
+  right: -50% !important;
 }
 
 .icon > input[type=checkbox]{
