--- a/rabbithole/src/app/sub-systems/admin/admin.component.html
+++ b/rabbithole/src/app/sub-systems/admin/admin.component.html
@@ -1,1 +1,9 @@
-<p>admin works!</p>
+<div id="chatBoxLeft" >
+    <div id="chatBoxHeading">Contacts</div>
+    <input type="text" name="MessageSearchInput"  [(ngModel)]='searchText' #receiverName id="MessageSearchInput" #MessageSearchInput placeholder="Search for people to message"/>                
+        <mat-button-toggle-group  #contactBox [vertical]="true" class="mat-elevation-z0" #toggleBtn="matButtonToggleGroup">
+            <mat-button-toggle id = {{item.email}} class="chatBoxContact" *ngFor="let item of contacts | appFilter: searchText" [value]="item.email" value="SelectedContact" (click)="changeDisplayedUser(item.email) ">
+                <h1>{{ item.email }}</h1> 
+            </mat-button-toggle>
+        </mat-button-toggle-group>
+</div>
