--- a/rabbithole/src/app/sub-systems/admin/admin.component.html
+++ b/rabbithole/src/app/sub-systems/admin/admin.component.html
@@ -8,9 +8,68 @@
         </mat-button-toggle-group>
 </div>
 
-<div class="show" *ngIf="dUser">
-    <h1>{{name}}</h1>
-    <button (click)="makeAdmin(dUser.Item.email)" *ngIf="!isAdmin">Make Admin</button>
-    <button *ngIf="isAdmin" (click)="removeAdmin(dUser.Item.email)">Remove Admin</button>
-</div>
+<ng-container *ngIf="dUser">
+    <br>
+    <br>
+    <div class="show" >
+        <h1>{{name}}</h1>
+        <button (click)="makeAdmin(dUser.Item.email)" *ngIf="!isAdmin">Make Admin</button>
+        <button *ngIf="isAdmin" (click)="removeAdmin(dUser.Item.email)">Remove Admin</button>
+    </div>
    
+    <div class="mat-elevation-z8">
+        <h2 class="claims-title">Employee's claims: </h2>
+        <br>
+        <br>
+        <table mat-table [dataSource]="dataSource">
+            
+          <!-- Type Column -->
+          <ng-container matColumnDef="Type">
+            <th mat-header-cell *matHeaderCellDef> Type </th>
+            <td mat-cell *matCellDef="let claim"> {{claim.type}} </td>
+          </ng-container>
+      
+          <!-- Vendor Column -->
+          <ng-container matColumnDef="Vendor">
+            <th mat-header-cell *matHeaderCellDef> Vendor </th>
+            <td mat-cell *matCellDef="let claim"> {{claim.vendor}} </td>
+          </ng-container>
+    
+          <!-- Description Column -->
+          <ng-container matColumnDef="Description">
+            <th mat-header-cell *matHeaderCellDef> Description </th>
+            <td mat-cell *matCellDef="let claim"> {{claim.description}} </td>
+          </ng-container>
+    
+           <!-- Total Column -->
+           <ng-container matColumnDef="Total">
+            <th mat-header-cell *matHeaderCellDef> Total </th>
+            <td mat-cell *matCellDef="let claim"> {{claim.total}} </td>
+          </ng-container>
+      
+          <!-- Date Column -->
+          <ng-container matColumnDef="Date">
+            <th mat-header-cell *matHeaderCellDef>  Date </th>
+            <td mat-cell *matCellDef="let claim"> {{claim.date}} </td>
+          </ng-container>
+
+          <!-- Actions Column -->
+          <ng-container matColumnDef="Actions">
+            <th mat-header-cell *matHeaderCellDef> Actions </th>
+            <td mat-cell *matCellDef="let claim">
+                <button class="success-button" (click)="updateClaim(claim, 'accepted');" mat-stroked-button color="success">Accept</button>
+                &nbsp;&nbsp;
+                <button class="declined-button" (click)="updateClaim(claim, 'declined');" mat-stroked-button color="warn">Decline</button>
+            </td>
+          </ng-container>
+      
+          <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
+          <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
+        </table>
+      
+        <mat-paginator [pageSizeOptions]="[10, 15]"
+                       showFirstLastButtons 
+                       aria-label="Select page of periodic elements">
+        </mat-paginator>
+      </div>
+</ng-container>
