--- a/rabbithole/src/app/sub-systems/admin/admin.component.scss
+++ b/rabbithole/src/app/sub-systems/admin/admin.component.scss
@@ -472,3 +472,107 @@ mat-button-toggle-group::-webkit-scrollbar {
     color:#A7FF2D;
 
   }
+
+
+/*
+
+  SCSS FOR THE CLAIMS TABLE
+
+*/
+$greyColour: #212121;
+$greenColour: #a7ff2d;
+$lightGreyColour: #3e3d3d;
+$lightestGreyColour: #ededed;
+
+table {
+  width: 50vw;
+  height: 20vh;
+  background-color: transparent;
+}
+
+.mat-elevation-z8{
+  position: absolute;
+  top: 25%;
+  right:15%;
+  width: 50vw;
+}
+
+.claims-title{
+  color: $greenColour;
+  font-size: x-large;
+  padding: 5%;
+}
+
+td tr {
+  color: $greenColour;
+}
+
+mat-paginator {
+  background-color: transparent;
+  color: $greenColour;
+}
+
+.success-button{
+  color: $greenColour;
+  border:$greenColour;
+  background: rgba(0, 128, 0, 0.25);
+}
+
+.declined-button{
+  color: red;
+  border: red;
+  background: rgba(255, 0, 0, 0.25);
+}
+
+.mat-cell,
+.mat-header-cell {
+  color: $greenColour;
+  border-style: none !important;
+}
+
+.mat-table {
+  border-collapse: separate !important;
+  border-spacing: -0px 5px !important;
+}
+
+td.mat-cell {
+  border-right: 10px solid $lightGreyColour !important;
+  border-left: 10px solid $lightGreyColour !important;
+  background-color: $lightGreyColour;
+  color: $lightestGreyColour;
+}
+
+th.mat-header-cell {
+  border-right: 10px solid $greyColour !important;
+  border-left: 10px solid $greyColour !important;
+  color: $greenColour;
+  font-size: medium;
+}
+
+::ng-deep .mat-select-value {
+  color: $greenColour;
+}
+
+::ng-deep .mat-option-text {
+    color: $greenColour;
+}
+
+::ng-deep mat-option {
+    background: $greyColour !important;
+    color: $greyColour !important;
+    border-bottom: 1px solid #3e3d3d !important;
+  }
+
+  ::ng-deep .mat-select-arrow {
+    color: $greenColour !important;
+    width: 0;
+    height: 0;
+    border-left: 5px solid transparent;
+    border-right: 5px solid transparent;
+    border-top: 5px solid;
+    margin: 0 4px;
+}
+
+::ng-deep .mat-form-field-label-wrapper {
+    border-bottom: 0.5px solid $greenColour !important;
+}
