--- a/rabbithole/src/styles.scss
+++ b/rabbithole/src/styles.scss
@@ -19,7 +19,9 @@ $retroGreen: #A7FF2D;
 }
 
 body { margin: 0; font-family: Roboto, "Helvetica Neue", sans-serif; background-color: #212121;}
-
+button:focus {
+    outline: 0 !important;
+}
 //apparently we need to put the auth css in Global, because it gets called later. 
 
 [data-amplify-authenticator-signin]
