fixed colors in events and admin claims

--- a/rabbithole/src/app/sub-systems/events/screens/events-home/events-home.component.html
+++ b/rabbithole/src/app/sub-systems/events/screens/events-home/events-home.component.html
@@ -92,7 +92,7 @@
           <td>
             <input
               type="color"
-              [(ngModel)]="event.color"
+              [(ngModel)]="event.color.primary"
               (change)="refresh.next(); updateEvent();"
             />
           </td>
